data/derived/fa15/progs/unify/prog3757.ml.out
Characters 68-72:
  | VarX			    -> Printf.printf ("%s" x);
                                 ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
